# ocr-parser

./: .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  pyproject.toml
inputs/: 0183ZB0029222_392628u MRS HELDA PRINCY.json  0183ZB0029242_817026m MR JOHN PAULUS.json  415704d7-d0f9-4432-850d-739263d590fb (1).json  CCWEB_0183ZB002913_548800k  MRS.HELDA PRINCY.R.json  Lab Report 2 Multipage.json
output/: helda_princy_coag_llm.json  helda_princy_karyotype_llm.json  john_paulus_llm.json  lab_report_multipage_llm.json
pipeline/: __init__.py  config.py  extractor.py  grouper.py  llm_handler.py  llm_pipeline.py  normalizer.py  run.py  segmenter.py
